--- a/SpringRestAPi/pom.xml
+++ b/SpringRestAPi/pom.xml
@@ -8,13 +8,14 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.spring.rest</groupId>
-	<artifactId>springrest</artifactId>
+	<groupId>com.Spring.com</groupId>
+	<artifactId>SpringRestAPi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springrest</name>
-	<description>Demo project for Spring Rest</description>
+	<name>SpringRestAPi</name>
+	<description>Demo project for SpringRestAPi</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
