--- a/SpringRestAPi/pom.xml
+++ b/SpringRestAPi/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.Spring.com</groupId>
 	<artifactId>SpringRestAPi</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>SpringRestAPi</name>
 	<description>Demo project for SpringRestAPi</description>
 	<properties>
@@ -18,6 +18,10 @@
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
