--- a/SpringRestAPi/src/main/resources/application.properties
+++ b/SpringRestAPi/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=8080
+#SQL Configuration
+spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/myhiber
+spring.datasource.username=root
+spring.datasource.password=root
+#Hibernate Configuration
+spring.jpa.hibernate.ddl.auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
